@@ -32,3 +32,4 @@ Changes in version 1.3.x
 + added splitOn and unsplitOn functions
 + CLR transformation: remove internal relative transformation
 + Replace 'abund_values' argument with 'assay_name'
++ getExpCrossCorr: added altExp option
